# polymarket-smartflow

./: pyproject.toml  readme.md  requirements.txt
scripts/: market_wallets.py
src/pmsf/: alerts.py  cly.py  collector.py  config.py  features.py  flow.py  polymarket_client.py  pricer.py  scorer.py  storage_lmdb.py  types.py  universe.py
src/pmsf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/scripts/: fetch_market_trades.py  smoke_lmdb.py
